fixed banner overflow bug

--- a/style/style.css
+++ b/style/style.css
@@ -20,13 +20,10 @@ a
   color: #009FFF;}
 
 #banner
-{ width: 100%;
-  padding-bottom: 10px;
+{ 
+  width: 100%;
   background: #666;
-  float: top;
-  clear: both;
 }
-
 
 #banner:after { 
    content: " ";
@@ -39,16 +36,16 @@ a
 { 
   float: left;
   height: 240px;  
-  margin-left: 15%;
-  margin-top: 10px;
+  margin: 10px 0px 10px 15%;
   border-radius: 35px;
   box-shadow: 0px 0px 15px #444;
 }
 
 #banner_text 
-{ position: relative;
-  top: 30px;
-  left: 30px;
+{ 
+  position: relative;
+  padding: 30px 0 10px 0;
+  left: 5%;
 }
 
 #banner_text h1
